--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,25 @@
 
 .App{
     padding: 0.5rem 3.5rem;
-    overflow: hidden;
+    overflow:hidden;
     color: var(--black);    
 }
-
+.button{
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 34px;
+  border: none;
+  color: whitesmoke;
+  padding: 10px;
+  background:linear-gradient(180deg,#fdc50f 26.71%,#fb982f 99.32%);
+  /* box-shadow: 0px 20px 24px 3px rgba(251,161,40,0.42); */
+}
+.button:hover{
+  cursor: pointer;
+  background: white;
+  color: var(--orange);
+  border: 2px solid var(--orange);
+}
 
   
 
