Changes in Service folder

--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -30,8 +30,10 @@
     font-weight: bold;
     margin: 1rem;
 }
-.s-button{
+.button.button.s-button{
     width: 8rem;
+}
+.s-button{
     height: 3rem;
     margin-top: 1rem;
 }
