Made website responsive

--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -40,3 +40,21 @@
 .right{
     position: relative;
 }
+@media screen and (max-width: 480px) {
+    .Services {
+      margin-top: 0;
+      flex-direction: column;
+      gap: 5rem;
+      height: 66rem;
+      padding: 0;
+    }
+  
+    .card {
+      display: flex;
+      flex-direction: column;
+      gap: 17rem;
+    }
+    .card > * {
+      position: static;
+    }
+  }
