--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,11 +1,11 @@
-.footer{
+.footer {
     display: flex;
-    position: relative;
     align-items: center;
+    margin: -0.5rem -3.5rem;
+    position: relative;
     margin-top: -7rem;
-    margin: -0.5rem --3.5rem;
-}
-.f-content{
+  }
+  .f-content {
     position: absolute;
     display: flex;
     align-items: center;
@@ -13,11 +13,15 @@
     flex-direction: column;
     width: 100%;
     margin-top: 4rem;
-    color: white;
     gap: 4rem;
-    margin-top: 4rem;
-}
-.f-icons{
+    color: white;
+  }
+  .f-icons {
     display: flex;
     gap: 2rem;
-}
+  }
+@media screen and (max-width: 480px){
+    .f-content{
+      transform: scale(.5);
+    }
+  }
