--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -14,14 +14,17 @@
     overflow: visible!important;
 }
 .Portfolio-slider{
+    cursor: pointer;
     margin-top: 3rem;
     width: 100%;
 }
 .Portfolio-slider.swiper-slider{
     width: 20rem;
+    height: 7rem;
 }
 .Portfolio img{
-    width: 19rem;
+    width: 20rem;
+    height: 11rem;
     filter: drop-shadow(-12px 15px 13px rgba(0,0,0,0.25)); 
     border-radius: 19px;
 }
