--- a/src/Components/Works/Works.css
+++ b/src/Components/Works/Works.css
@@ -97,3 +97,25 @@
     left: 18rem;
     top: 8rem;
 }
+@media screen and (max-width: 480px) {
+    .Works {
+      flex-direction: column;
+      height: 55rem;
+      padding: 0;
+      gap: 5rem;
+    }
+  
+    .w-right {
+      display: flex;
+      align-items: flex-start;
+      justify-content:start;
+      transform: scale(0.7);
+    }
+    .w-mcircle{
+      position: static;
+    }
+    .w-backcircle{
+      left: 8rem!important;
+    }
+  
+  }
