--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -5,21 +5,23 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color:wheat;
+    size: bold;
     text-align: center;
-    background: rgba(255, 255,255,0.26);
-    border: 7px solid var(--orangeCard);
+    background: linear-gradient(130deg,black,transparent);
+    border: 7px solid goldenrod;
     box-shadow: var(--boxShadow);
     border-radius: 20px;
     padding: 0px 26px 2rem 26px;
 }
 .Card>*{
     position:relative;
-    top: -6rem;
+    top: 6rem;
 }
 .Card span:nth-of-type(2){
     font-size: 16px;
-    color: var(--gray);
-    top: -6rem;
+    color:whitesmoke;
+    top: 8rem;
 }
 @media screen and (max-width: 480px){
     .Card{
